# app/Http/Resources/FilmResource.php
@@ -24,6 +24,10 @@ class FilmResource extends JsonResource
             'year' => $this->year,
             'imdb_id' => $this->imdb_id,
             'imdb_rating' => $this->imdb_rating,
+            'shiki_id' => $this->shiki_id,
+            'shiki_rating' => $this->shiki_rating,
+            'is_anime' => $this->is_anime,
+            'is_serial' => $this->is_serial,
             'title' => $this->title,
             'overview' => $this->overview,
             'genres' => GenreResource::collection($this->genres),
