# app/Http/Resources/FilmShortResource.php
@@ -19,6 +19,7 @@ class FilmShortResource extends JsonResource
             'poster_url' => $this->poster_url,
             'year' => $this->year,
             'imdb_rating' => $this->imdb_rating,
+            'shiki_rating' => $this->shiki_rating,
             'title' => $this->title,
             'genres' => GenreResource::collection($this->genres)
         ];
